[workspace]
members = ["crates/*", "crates/*/wasm"]
exclude = ["crates/_template"]
resolver = "2"

[workspace.dependencies]
napi = { version = "3", default-features = false, features = ["napi4", "napi6", "serde-json"] }
napi-derive = "3"

[profile.release]
lto = true
strip = "symbols"
codegen-units = 1
panic = "abort"

