[package]
name = "amigo-jose"
version = "0.1.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"
