[package]
name = "amigo-jwt"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto", "use_pem"] }
serde_json = "1"
base64 = "0.22"

[build-dependencies]
napi-build = "2"
