[package]
name = "amigo-typst"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
typst = "0.13"
typst-pdf = "0.14"
typst-assets = { version = "0.13", features = ["fonts"] }
comemo = "0.5"
ecow = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[build-dependencies]
napi-build = "2"
