[package]
name = "amigo-zip"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
zip = { version = "8", default-features = false, features = ["deflate", "deflate-flate2"] }

[build-dependencies]
napi-build = "2"
