[package]
name = "amigo-csv-wasm"
version = "0.1.1"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
amigo-csv-core = { path = "../../_csv-core" }
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
